--- a/TME4/TME4.ipynb
+++ b/TME4/TME4.ipynb
@@ -44,7 +44,7 @@
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 10192), started 0:00:18 ago. (Use '!kill 10192' to kill it.)"
+       "Reusing TensorBoard on port 6006 (pid 10192), started 0:29:16 ago. (Use '!kill 10192' to kill it.)"
       ]
      },
      "metadata": {},
@@ -54,11 +54,11 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-fd007a3e78fc4114\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-58a0d58536cb5295\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-fd007a3e78fc4114\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-58a0d58536cb5295\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -84,11 +84,64 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Taille séquence = 15\n",
+    "Nombre de classes = 10\n",
+    "Taille batch = 30\n",
+    "Taille latente = 20\n",
+    "Nous remarquons que les prédictions correctes de villes en fonction des températures augmentent à chaque itération mais nous pouvons constater que l'accuracy stagne vers 24% au bout d'un certain moment. \n",
+    "Cependant, en prenant des villes ayant des climats très différents, nous constatons des résultats bien meilleurs.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Reusing TensorBoard on port 6008 (pid 4260), started 0:00:12 ago. (Use '!kill 4260' to kill it.)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-57ed655ec13cdd76\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-57ed655ec13cdd76\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          const port = 6008;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "logs_base_dir = \"./runs/exo3/\"\n",
+    "os.makedirs(logs_base_dir, exist_ok=True)\n",
+    "%tensorboard --logdir {logs_base_dir} --port=6008"
+   ]
   },
   {
    "cell_type": "code",
