--- a/TME4/TME4.ipynb
+++ b/TME4/TME4.ipynb
@@ -44,7 +44,7 @@
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 10192), started 0:29:16 ago. (Use '!kill 10192' to kill it.)"
+       "Reusing TensorBoard on port 6006 (pid 10192), started 1:47:04 ago. (Use '!kill 10192' to kill it.)"
       ]
      },
      "metadata": {},
@@ -54,11 +54,11 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-58a0d58536cb5295\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-59c2e71ca62715f7\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-58a0d58536cb5295\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-59c2e71ca62715f7\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -98,13 +98,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Prédiction Interpolation à t+1 en fonction de la ville et de t"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 6008 (pid 4260), started 0:00:12 ago. (Use '!kill 4260' to kill it.)"
+       "Reusing TensorBoard on port 6008 (pid 4260), started 1:17:59 ago. (Use '!kill 4260' to kill it.)"
       ]
      },
      "metadata": {},
@@ -114,11 +128,11 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-57ed655ec13cdd76\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-f77187ac7db7b330\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-57ed655ec13cdd76\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-f77187ac7db7b330\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6008;\n",
        "          if (port) {\n",
@@ -144,11 +158,58 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Nous voyons que le modèle surapprend très vite. Il est normal que la loss augmente car la tâche d'inférer les températures est une tâche ardue.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Reusing TensorBoard on port 6009 (pid 4604), started 0:00:31 ago. (Use '!kill 4604' to kill it.)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-b2b20738a29bd9dc\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-b2b20738a29bd9dc\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          const port = 6009;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "logs_base_dir = \"./runs/exo4/\"\n",
+    "os.makedirs(logs_base_dir, exist_ok=True)\n",
+    "%tensorboard --logdir {logs_base_dir} --port=6009"
+   ]
   },
   {
    "cell_type": "code",
