--- a/TME4/TME4.ipynb
+++ b/TME4/TME4.ipynb
@@ -2,28 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/javascript": [
-       "\n",
-       "console.log('Starting front end url_querystring_target comm target');\n",
-       "const comm = Jupyter.notebook.kernel.comm_manager.new_comm('url_querystring_target', {'init': 1});\n",
-       "comm.send({'ipyparams_browser_url': window.location.href});\n",
-       "console.log('Sent window.location.href on url_querystring_target comm target');\n",
-       "\n",
-       "comm.on_msg(function(msg) {\n",
-       "    console.log(msg.content.data);\n",
-       "});\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The tensorboard extension is already loaded. To reload it, use:\n",
+      "  %reload_ext tensorboard\n"
+     ]
     }
    ],
    "source": [
@@ -38,13 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 10192), started 1:47:04 ago. (Use '!kill 10192' to kill it.)"
+       "Reusing TensorBoard on port 6006 (pid 10192), started 23:00:43 ago. (Use '!kill 10192' to kill it.)"
       ]
      },
      "metadata": {},
@@ -54,11 +42,11 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-59c2e71ca62715f7\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-8f6baf90947f3f42\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-59c2e71ca62715f7\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-8f6baf90947f3f42\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -112,13 +100,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 6008 (pid 4260), started 1:17:59 ago. (Use '!kill 4260' to kill it.)"
+       "Reusing TensorBoard on port 6008 (pid 4260), started 22:31:43 ago. (Use '!kill 4260' to kill it.)"
       ]
      },
      "metadata": {},
@@ -128,11 +116,11 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-f77187ac7db7b330\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-60fefee5878a32bc\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-f77187ac7db7b330\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-60fefee5878a32bc\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6008;\n",
        "          if (port) {\n",
