--- a/TME4/TME4.ipynb
+++ b/TME4/TME4.ipynb
@@ -26,13 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 10192), started 23:00:43 ago. (Use '!kill 10192' to kill it.)"
+       "Reusing TensorBoard on port 6006 (pid 10192), started 1 day, 0:56:05 ago. (Use '!kill 10192' to kill it.)"
       ]
      },
      "metadata": {},
@@ -42,11 +42,11 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-8f6baf90947f3f42\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-626685d2ec1df8e6\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-8f6baf90947f3f42\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-626685d2ec1df8e6\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -100,13 +100,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 6008 (pid 4260), started 22:31:43 ago. (Use '!kill 4260' to kill it.)"
+       "Reusing TensorBoard on port 6008 (pid 4260), started 23:36:44 ago. (Use '!kill 4260' to kill it.)"
       ]
      },
      "metadata": {},
@@ -116,11 +116,11 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-60fefee5878a32bc\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-cba10cd86814b2c\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-60fefee5878a32bc\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-cba10cd86814b2c\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6008;\n",
        "          if (port) {\n",
@@ -149,7 +149,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nous voyons que le modèle surapprend très vite. Il est normal que la loss augmente car la tâche d'inférer les températures est une tâche ardue.\n"
+    "Nous voyons que le modèle surapprend très vite. Il est normal que la loss augmente car la tâche d'inférer les températures est une tâche ardue.\n",
+    "Nous constatons que dès lors que la taille de la séquence à inférer est supérieure à 1, nous obtenons des loss qui explosent.\n",
+    "Pour une séquence à prédire de 1, nous pouvons voir qu'un apprentissage sur une séquence de taille est 10 est suffisant.\n",
+    "Pour une séquence à prédire de taille 2, nous pouvons voir qu'il faut que les séquences d'apprentissages augmentent pour obtenir des résultats un tant soit peu intéressant. \n",
+    "C'est pour cette raison que les meilleurs résultats(pour une séquence de forecast de taille 2) sont obtenus pour une taille de séquence d'apprentissage de 15.\n"
    ]
   },
   {
