Fin rapport TME 4, TME 5 en cours, Fin TME 6

--- a/TME4/TME4.ipynb
+++ b/TME4/TME4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -26,13 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 10192), started 1 day, 0:56:05 ago. (Use '!kill 10192' to kill it.)"
+       "Reusing TensorBoard on port 6006 (pid 10192), started 1 day, 20:40:04 ago. (Use '!kill 10192' to kill it.)"
       ]
      },
      "metadata": {},
@@ -42,11 +42,11 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-626685d2ec1df8e6\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-d17385308e7b09a6\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-626685d2ec1df8e6\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-d17385308e7b09a6\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -100,13 +100,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 6008 (pid 4260), started 23:36:44 ago. (Use '!kill 4260' to kill it.)"
+       "Reusing TensorBoard on port 6008 (pid 4260), started 1 day, 20:11:02 ago. (Use '!kill 4260' to kill it.)"
       ]
      },
      "metadata": {},
@@ -116,11 +116,11 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-cba10cd86814b2c\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-dbfccb354a96b0a9\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-cba10cd86814b2c\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-dbfccb354a96b0a9\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6008;\n",
        "          if (port) {\n",
@@ -158,13 +158,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 6009 (pid 4604), started 0:00:31 ago. (Use '!kill 4604' to kill it.)"
+       "Reusing TensorBoard on port 6009 (pid 4604), started 1 day, 18:53:36 ago. (Use '!kill 4604' to kill it.)"
       ]
      },
      "metadata": {},
@@ -174,11 +174,11 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-b2b20738a29bd9dc\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-24f697f4d077d26b\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-b2b20738a29bd9dc\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-24f697f4d077d26b\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6009;\n",
        "          if (port) {\n",
@@ -201,6 +201,21 @@
     "logs_base_dir = \"./runs/exo4/\"\n",
     "os.makedirs(logs_base_dir, exist_ok=True)\n",
     "%tensorboard --logdir {logs_base_dir} --port=6009"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nous constatons de la même manière qu'auparavant, plus la séquence que nous inférons est grande plus nous devons augmenter la taille des séquences sur lesquelles nous apprenons. \n",
+    "C'est pour cette raison qu'il est plus intéressant d'apprendre sur des séquences de taille 20."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ici nous apprenons des lettres, il serait certainement plus intéressant d'apprendre sur un dictionnaire de mots. Nous pourrions appliquer un embedding sur les séquences en questions pour mieux traiter les ressemblances entre mots. \n"
    ]
   },
   {
